# chatwoot-diffy

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  celery_worker.py  dev_requirements.txt  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup_chatwoot_config.ipynb  test_chatwoot.ipynb
.github/workflows/: docker-build-push.yml  pr_agent.yml
alembic/: env.py
alembic/versions/: 2025_01_07_0302-14b3222961cf_initial_migration.py
app/: __init__.py  config.py  database.py  main.py  tasks.py  telemetry.py
app/api/: chatwoot.py  health.py  webhooks.py
app/db/: README.md  __init__.py  base.py  models.py  session.py  utils.py
app/db/migrations/: env.py
app/models/: __init__.py  database.py  non_database.py
app/schemas/: README.md  __init__.py  chatwoot.py  conversation.py  dify.py
app/utils/: __init__.py  error_handling.py  sentry.py
non_pipe_configurations/: regions.json  teams.json
notebooks/: setup_chatwoot_config.ipynb
scripts/: quick_local_healthcheck.py
tests/: README.md  conftest.py  test_api_endpoints.py  test_chatwoot_integration.py  test_integration_flows.py  test_utils.py
