[project]
name = "chatwoot-handler"
version = "0.1.0"
description = "A Python handler for Chatwoot API"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "sqlalchemy>=1.4.23",
    "psycopg2-binary>=2.9.1",
    "python-dotenv>=0.19.0",
    "celery>=5.2.3",
    "redis>=4.0.2",
    "httpx>=0.23.0",
    "alembic>=1.7.4",
    "pydantic>=1.9.0",
    "sqlmodel>=0.0.8",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0",
    "opentelemetry-instrumentation-celery>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "opentelemetry-exporter-otlp>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "jupyter",
]

[tool.setuptools]
packages = ["app", "alembic"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = ["B008"]  # fastapi dependency injection needs this

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
