[project]
name = "chatdify"
version = "0.0.1.beta.1"
description = "A Python connector for integrating Chatwoot with Dify AI"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.115.8",
    "uvicorn==0.34.2",
    "sqlmodel==0.0.22",
    "httpx==0.28.1",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.0.1",
    "celery==5.4.0",
    "redis==5.2.1",
    "alembic==1.14.1",
    "opentelemetry-api==1.30.0",
    "opentelemetry-sdk==1.30.0",
    "opentelemetry-instrumentation-fastapi==0.51b0",
    "opentelemetry-instrumentation-sqlalchemy==0.51b0",
    "opentelemetry-instrumentation-celery==0.51b0",
    "opentelemetry-instrumentation-httpx==0.51b0",
    "opentelemetry-exporter-otlp==1.30.0",
    "asyncpg==0.30.0",
    "sentry-sdk[fastapi,celery]==2.24.0",
]

[dependency-groups]
dev = [
    "ruff",
    "pre-commit",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "pytest-cov>=4.0.0",
    "pytest-dotenv>=0.5.2",
    "aiohttp>=3.12.2",
]

[tool.setuptools]
packages = ["app", "alembic"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = ["B008"]  # fastapi dependency injection needs this

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
env_files = [".env"]

[tool.alembic]
script_location = "alembic"
sqlalchemy.url = "driver://user:pass@localhost/dbname"
file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"

# Logging configuration
[tool.alembic.logger_root]
level = "WARN"
handlers = "console"
qualname = ""

[tool.alembic.logger_sqlalchemy]
level = "WARN"
handlers = ""
qualname = "sqlalchemy.engine"

[tool.alembic.logger_alembic]
level = "INFO"
handlers = ""
qualname = "alembic"

[tool.alembic.handler_console]
class = "StreamHandler"
args = "(sys.stdout,)"
level = "NOTSET"
formatter = "generic"

[tool.alembic.formatter_generic]
format = "%(levelname)-5.5s [%(name)s] %(message)s"
datefmt = "%H:%M:%S"
